--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,15 @@
 services:
-  restapi:
-    image: my_backend
-    build: .
-    restart: always
-    depends_on:
-      - db
-    env_file:
-      - .env
-    ports:
-      - "8000:8000"
-    entrypoint: ["python3", "main.py"]
   db:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=my_db_name
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
   adminer:
     image: adminer
     restart: always
