--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,27 @@ services:
   adminer:
     image: adminer
     restart: always
-    depends_on:
+    depends_on: #сначала БД, потом adminer
       - db
     ports:
       - '8081:8080'
+    web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: >
+      uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      DB_HOST: db
+      DB_PORT: 5432
 volumes:
   db_data:
