--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
       - db
     ports:
       - '8081:8080'
-    web:
+  web:
     build:
       context: .
       dockerfile: Dockerfile
     command: >
       uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
-      - .:/app
+      - ./src:/app/src
     ports:
       - "8000:8000"
     depends_on:
@@ -34,6 +34,8 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
       DB_HOST: db
-      DB_PORT: 5432
+      DB_PORT: ${DB_PORT}
+      SECRET_KEY: ${SECRET_KEY}
+
 volumes:
   db_data:
